--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -1,5 +1,5 @@
 <h1>CONTACT</h1>
-<img src="../images/sunset.jpeg" alt="">
+<img src="images/sunset.jpeg" alt="">
 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit tenetur possimus quisquam cumque, ut sapiente quas nihil eveniet omnis enim, ullam neque obcaecati quam! Velit soluta ad aspernatur a vero!</p>
 <p>Excepturi ut doloremque minima iusto molestias itaque provident odio repudiandae aliquam, dolore iste adipisci corrupti praesentium impedit voluptatem optio sequi non laborum quod maxime quaerat, laboriosam placeat aut? Repellat, alias!</p>
 <p>Cum, odit alias nisi itaque libero ab, maxime architecto vero, neque doloribus sint enim quae possimus explicabo? Sapiente non accusamus laborum repellendus aliquam nemo nisi. Necessitatibus possimus doloribus ab corrupti.</p>
